# apis/main_category/mainCategoryApi.js
@@ -33,11 +33,11 @@ mainCategoryApi.get('/:id', async (req, res, next) => {
 })
 
 mainCategoryApi.post('/',verifyToken,adminRole,
-    checkRequiredFieldInBody(['name','description','url_image']),
+    checkRequiredFieldInBody(['name','description']),
     async (req, res, next) => {
         try {
-            let {name,description,url_image,sub_image} = req.body
-            const insertedId = await mainCategoryService.createMainCategory(name,description,url_image,sub_image)
+            let {name,description,url_image} = req.body
+            const insertedId = await mainCategoryService.createMainCategory(name,description,url_image)
 
             return res.status(200).json({status:200,message: 'Create new main-category successfully'})
         } catch (error) {
@@ -45,12 +45,12 @@ mainCategoryApi.post('/',verifyToken,adminRole,
         }
     })
 mainCategoryApi.put('/:id',verifyToken,adminRole,
-    checkRequiredFieldInBody(['name','description','url_image']),
+    checkRequiredFieldInBody(['name']),
     async (req, res, next) => {
         let {id} = req.params
         try {
-            let {name,description,url_image,sub_image} = req.body
-            await mainCategoryService.updateMainCategory(id,name,description,url_image,sub_image)
+            let {name,description,url_image} = req.body
+            await mainCategoryService.updateMainCategory(id,name,description,url_image)
             return res.status(200).json({status:200,message: 'Updated main-category successfully'})
         } catch (error) {
             return res.status(500).json({status:500,message: error})
@@ -68,5 +68,5 @@ mainCategoryApi.delete('/:id',verifyToken,adminRole,
             return res.status(500).json({status:500,message: error})
         }
     })
-
+    
 module.exports = mainCategoryApi
